--- a/popup.html
+++ b/popup.html
@@ -74,7 +74,7 @@
             </div>
 
              <div class="d-grid mb-3">
-                <button id="save" class="btn btn-success">Guardar esta postulación</button>
+                <button id="save" class="btn btn-success" disabled>Guardar esta postulación</button>
             </div>
 
         </div>
