--- a/popup.html
+++ b/popup.html
@@ -82,7 +82,7 @@
 
     <footer>
         <p class="mt-3 mb-1"> Creado por <a href="https://linktr.ee/botscrawlers" target="_blank">BotsCrawlers</a> </p>
-        <a href="https://botscrawlers.github.io/LinkedIn-Job-Saver/" target="_blank">Privacidad y contacto</a>
+        <a href="https://botscrawlers.github.io/LinkedIn-Job-Saver/privacy.html" target="_blank">Privacidad y contacto</a>
     </footer>
 
     <script src="popup.js"></script>
